Revert "Fix auth and security"