@@ -5,7 +5,6 @@ import jakarta.persistence.Id;
 import jakarta.persistence.Table;
 import lombok.Getter;
 
-import java.util.Collections;
 import java.util.Set;
 
 @Entity
@@ -29,16 +28,18 @@ public class Permission {
         }
     }
 
+
+    // Define CRUD permissions
     private static final RolePermission ADMIN_PERMISSIONS = new RolePermission
-            (Role.ADMIN, Set.of("CREATE", "READ", "UPDATE", "DELETE", "MANAGE_USERS", "MANAGE_PRODUCTS", "UPDATE_ORDER_STATUS"));
+            (Role.ADMIN, Set.of("CREATE", "READ", "UPDATE", "DELETE", "MANAGE_USERS", "MANAGE_PRODUCTS", "VIEW_REPORTS"));
     private static final RolePermission CUSTOMER_PERMISSIONS = new RolePermission
-            (Role.CUSTOMER, Set.of("READ", "VIEW_PRODUCTS","ADD_PRODUCTS_TO_CART","DELETE_PRODUCTS_FROM_CART", "VIEW_SHOPPING_CART", "GENERATE_ORDER_FROM_CART", "VIEW_ORDERS", "VIEW_ORDER_HISTORY"));
+            (Role.CUSTOMER, Set.of("READ", "VIEW_PRODUCTS","ADD_PRODUCTS_TO_CART","REMOVE_PRODUCTS_FROM_CART", "VIEW_SHOPPING_CART", "PLACE_ORDER", "VIEW_ORDERS"));
     private static final RolePermission SELLER_PERMISSIONS = new RolePermission
             (Role.SELLER, Set.of("CREATE", "READ", "UPDATE", "DELETE", "MANAGE_PRODUCTS", "ADD_PRODUCTS", "UPDATE_PRODUCTS", "DELETE_PRODUCTS"));
 
     public static boolean hasPermission(Role role, String permission) {
-        for (RolePermission rolePermission : getRolePermissions(role)) {
-            if (rolePermission.getPermissions().contains(permission)) {
+        for (RolePermission rolePermission : getRolePermissions(Role.CUSTOMER)) {
+            if (rolePermission.getRole() == role && rolePermission.getPermissions().contains(permission)) {
                 return true;
             }
         }
@@ -46,15 +47,6 @@ public class Permission {
     }
 
     public static Set<RolePermission> getRolePermissions(Role role) {
-        switch (role) {
-            case ADMIN:
-                return Set.of(ADMIN_PERMISSIONS);
-            case CUSTOMER:
-                return Set.of(CUSTOMER_PERMISSIONS);
-            case SELLER:
-                return Set.of(SELLER_PERMISSIONS);
-            default:
-                return Collections.emptySet();
-        }
+        return Set.of(ADMIN_PERMISSIONS, CUSTOMER_PERMISSIONS, SELLER_PERMISSIONS);
     }
 }
